chore: Improve code